--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,10 @@
 }
 
 .width_container {
-    max-width: 100%;
+    max-width: 1100px;
     border: 2px solid orange;
     margin: 0 auto;
-    width: 100vh;
+    height: 100vh;
 }
 
 .header_container {
@@ -17,11 +17,11 @@
     align-items: center;
     border: 2px solid green;
     margin: 0 auto;
-    padding: 1.5em;
+    padding-top: 1.5em;
 }
 
 .img_container {
-    max-width: 40%;
+    /* max-width: 40%; */
 }
 
 img {
@@ -29,6 +29,7 @@ img {
 }
 
 .introduction {
+    
     padding: 1em 0.5em;
     max-width: 50%;
     border: 1px solid red;
