--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,40 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+header {
+  background-color: red;
+  -webkit-linear-gradient(30deg, #013A6B 50%, #004E95 50%);
 }
 
 .width_container {
-    max-width: 1100px;
-    border: 2px solid orange;
-    margin: 0 auto;
-    height: 100vh;
+  max-width: 1200px;
 }
 
 .header_container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid green;
-    margin: 0 auto;
-    padding-top: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid green;
+  margin: 0 auto;
+  padding-top: 1.5em;
 }
 
 .img_container {
-    /* max-width: 40%; */
+  width: 50%;
+  max-width: 480px;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
 
 .introduction {
-    
-    padding: 1em 0.5em;
-    max-width: 50%;
-    border: 1px solid red;
+  font-size: 1.4rem;
+  /* padding: 1em 0.5em; */
+  max-width: 50%;
+  border: 1px solid red;
+  padding: 2em;
 }
-
-
-
