--- a/styles.css
+++ b/styles.css
@@ -5,30 +5,35 @@
 }
 
 body {
-  font-family: 'Playfair Display', serif;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Playfair Display", serif;
+  font-family: "Roboto", sans-serif;
+
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.795);
 }
 
 header {
-  background-color: #013A6B;
-  background-image: -webkit-linear-gradient(106deg, #FFFFFF 100%, #2596be 60%);
+  background-color: #013a6b;
+  background-image: -webkit-linear-gradient(106deg, #ffffff 100%, #2596be 60%);
 }
 
 .width_container {
   /* max-width: 60rem; */
   max-width: 1100px;
+  margin: 0 auto;
 }
 
 .header_container {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 2px solid green;
   margin: 0 auto;
   padding-top: 4em;
   padding-bottom: 1.5em;
 
-  background-image: -webkit-linear-gradient(106deg, #FFFFFF 40%, #2596be 50%);
+  background-image: -webkit-linear-gradient(106deg, #ffffff 40%, #2596be 50%);
 }
 
 .img_container {
@@ -46,7 +51,7 @@ img {
 }
 
 .introduction > h1 {
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-weight: 500;
   padding-bottom: 0.3em;
 }
@@ -62,7 +67,6 @@ img {
   justify-content: flex-end;
   padding-top: 1em;
   gap: 1em;
-  
 }
 
 a {
@@ -70,6 +74,117 @@ a {
   color: black;
   font-size: 1.5rem;
 }
+
+.width_container > h1 {
+  font-family: "Playfair Display", serif;
+  font-weight: 500;
+  padding-bottom: 0.3em;
+}
+
+section {
+  width: 100%;
+  height: auto;
+  background-color: white;
+}
+
+section > h1 {
+  padding-top: 4em;
+  padding-left: 1.5em;
+}
+
+.project-text {
+  padding: 0.5em 1em 3em 1em;
+}
+
+.cards-container {
+  display: grid;
+  flex-direction: column;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 2em;
+  padding: 0em 2em 2em 2em;
+  justify-content: center;
+}
+
+.card {
+  border: 2px solid black;
+  /* padding: 2em; */
+  /* min-height: 15rem; */
+}
+
+.project-pic {
+  text-align: center;
+  padding: 2em;
+  background-color: rgb(209, 135, 135);
+  font-size: 2rem;
+  color: white;
+  font-family: "Playfair Display", serif;
+}
+
+.project-svg {
+  height: 24px;
+  width: 24px;
+}
+
+.social-media {
+  display: flex;
+  gap: 0.8em;
+}
+
+.upper-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 0.5em;
+}
+
+footer {
+  width: 100%;
+  margin-top: auto;
+  background-color: #2596be;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 2.3em;
+}
+
+.footer-pic-container {
+  width: 50%;
+  margin-right: 2em;
+}
+
+.contacts-container {
+  font-size: 1.2rem;
+  margin-left: 2em;
+}
+
+.contacts-container h1 {
+  font-family: "Playfair Display", serif;
+  color: white;
+  padding-bottom: 0.7em;
+}
+
+.contacts-container p {
+  color: white;
+}
+
+.svg-icons-footer {
+  margin-top: 2em;
+}
+
+.phone-pic-svg {
+  width: 24px;
+  height: 24px;
+}
+
+.phone-svg {
+  display: flex;
+  gap: 0.5em;
+  margin-bottom: 0.6em;
+}
+
+
 
 @media (max-width: 860px) {
   .header_container {
@@ -91,4 +206,7 @@ a {
 }
 
 
-
+@media (max-width: 940px) {
+  footer {
+  }
+}
