--- a/styles.css
+++ b/styles.css
@@ -145,18 +145,18 @@ footer {
 
 .footer-container {
   display: flex;
-  justify-content: space-between;
-  padding: 2.3em;
+  justify-content: space-around;
+  padding: 2.5em;
 }
 
 .footer-pic-container {
   width: 50%;
-  margin-right: 2em;
+  /* margin-right: 2em; */
 }
 
 .contacts-container {
   font-size: 1.2rem;
-  margin-left: 2em;
+  /* margin-left: 2em; */
 }
 
 .contacts-container h1 {
@@ -184,8 +184,6 @@ footer {
   margin-bottom: 0.6em;
 }
 
-
-
 @media (max-width: 860px) {
   .header_container {
     flex-direction: column;
@@ -205,8 +203,66 @@ footer {
   }
 }
 
+/* Footer media */
+/* @media (max-width: 940px) {
+  .footer-pic-container {
+    max-width: 400px;
+  }
+  .contacts-container {
+    font-size: 0.9rem;
+  }
+}
 
-@media (max-width: 940px) {
-  footer {
+@media (max-width: 770px) {
+  .footer-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer-pic-container {
+    width: 100%;
+  }
+  .contacts-container {
+    font-size: 1rem;
+    width: 100%;
+    text-align: center;
+
+  }
+
+  .svg-icons-footer {
+    text-align: center;
+    padding-bottom: 1em;
+  }
+} */
+
+@media (max-width: 900px) {
+  .contacts-container {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 655px) {
+  .footer-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+  }
+  .contacts-container {
+    font-size: 1.2rem;
+    width: 100%;
+    width: 80%;
+    margin: 0 auto;
+  }
+  .footer-pic-container {
+    width: 80%;
+  }
+}
+
+@media (max-width: 435px) {
+  .contacts-container {
+    font-size: 0.8rem;
+  }
+  .footer-pic-container {
+    width: 100%;
   }
 }
